kubernetes/apps/monitoring/gatus/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - gatus.blackcats.cc
  rules:
    - backendRefs:
        - name: gatus
          port: 8080
